[package]
name = "inference_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
bytes = "1.5.0"
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
futures = "0.3.29"
hf-hub = "0.3.2"
json = "0.12.4"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokenizers = "0.15.0"
